--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@lm/le-webgl": "workspace:*",
     "@lm/utils": "workspace:*",
+    "@rollup/pluginutils": "^5.0.2",
     "@vitejs/plugin-vue": "^4.0.0",
     "sass": "^1.57.1",
     "vite": "^4.0.4",
