--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,9 +10,9 @@
   "editor.formatOnPaste": false,
   "editor.formatOnSave": false,
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true,
-    "source.fixAll.stylelint": true,
-    "source.fixAll.prettier": true
+    "source.fixAll.eslint": "explicit",
+    "source.fixAll.stylelint": "explicit",
+    "source.fixAll.prettier": "explicit"
   },
   "editor.insertSpaces": false,
   "editor.renderWhitespace": "all",
